# odeon

./: .gitignore  .gitmodules  AGENTS.md  CONTEXT.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: release-macos.yml
apps/api/: .env.example  requirements-release.txt  requirements.txt  run_server.py
apps/api/app/: main.py  models.py  paths.py
apps/api/app/audio/: analysis.py  compare.py  waveform_cache.py
apps/api/app/db/: repository.py
apps/api/app/ml/: __init__.py  pipeline.py  runpod_client.py
apps/api/app/select/: compatibility.py  embeddings.py  markers.py  metadata.py  models.py  repository.py  router.py  scanner.py  tl_provider.py  transition_graph.py
apps/api/app/separation/: separator.py
apps/audio-engine/: CMakeLists.txt  README.md
apps/audio-engine/scripts/: build.sh
apps/audio-engine/src/: EngineHost.cpp  EngineHost.h  OdeonDeckPlayer.h  OdeonDjDeck.h  OdeonDomain.h  OdeonEngineBehaviour.h  OdeonRoute.h  OdeonSession.cpp  OdeonSession.h  PlaybackEngineConfig.h  main.cpp
apps/desktop/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/public/: odeon-meter-worklet.js
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json  tauri.web.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api_sidecar.rs  lib.rs  main.rs  timeline_spike.rs
apps/desktop/src-tauri/src/timeline_embed/: macos.rs  mod.rs
apps/desktop/src/components/: ErrorBoundary.tsx
apps/desktop/src/hooks/: useAutomationRecorder.ts  useBoothSimulation.ts  useCursorLevel.ts  useNativeTimelineEmbed.ts  useRulerMagnify.ts  useSetLocatorShortcuts.ts  useSetTimelineShortcuts.ts  useTimelineWheel.ts  useTrackBuffer.ts  useTransportShortcuts.ts  useUndoShortcuts.ts  useWaveformCache.ts
apps/desktop/src/lib/: abletonClipPalette.ts  apiClient.ts  applyLaneAutomation.ts  ardourFader.ts  automationMath.ts  boothCurves.ts  boothDeckAssign.ts  boothDriveActions.ts  boothInteractive.ts  boothMeterSim.ts  boothMossFx.ts  boothSimulation.ts  boothTransportSim.ts  clipColorPresets.ts  countIn.ts  cursorLevel.ts  deckMixEngine.ts  djSyncCoordinator.ts  domResize.ts  engineClient.ts  enginePushThrottle.ts  ensureEngineAudio.ts  locatorLabels.ts  locatorLabelsIO.ts  markerUtils.ts  nativeStripHitTest.ts  nativeTimelineEmbed.ts  nativeTimelineHitTest.ts  perfDiagnostics.ts  proToolsFaderScale.ts  proToolsMeterScale.ts  proToolsWaveform.ts  rafThrottle.ts  referenceStemGroup.ts  renderExport.ts  routeIds.ts  seekSetTimeline.ts  setBeatGrid.ts  setBuilderPlayback.ts  setTimelineContext.ts  (+26 more)
apps/desktop/src/stores/: boothStore.ts  editSelectionStore.ts  engineStore.ts  interactionStore.ts  navigationStore.ts  playbackEngineStore.ts  projectStore.ts  selectStore.ts  selectionStore.ts  setBuilderStore.ts  setLocatorStore.ts  setTimelineStore.ts  studioAutomationStore.ts  studioDeckStore.ts  studioLaneStore.ts  (+6 more)
crates/odeon-timeline/: Cargo.toml  README.md
crates/odeon-timeline/src/: bitmap_font.rs  grid.rs  lib.rs  scene.rs  viewport.rs
crates/odeon-timeline/src/embed/: frame.rs  ipc.rs  mod.rs  runner.rs
crates/odeon-timeline/src/spike/: appkit_surface.rs  mod.rs  renderer.rs
crates/odeon-timeline/src/wavecache/: mod.rs
docs/: API.md  ARCHITECTURE.md  AUDACITY_ARDOUR_PARITY.md  AUDIO_ENGINE.md  DATA_MODEL.md  DAW_COMPARISON.md  INSTALL.md  LAUNCH_DISTRIBUTION.md  LAUNCH_READINESS.md  ODEON_DJ_RESEARCH.md  ODEON_SELECT.md  PARITY_PLAN.md  PERFORMANCE_PLAN.md  PRODUCTION_PERFORMANCE.md  RESEARCH.md  ROADMAP.md  WAVEFORM_CACHE.md
docs/adr/: 0001-three-process-architecture.md  0002-session-owns-playback-truth.md  0003-route-graph-not-waveform-player.md  0004-wavecache-only-waveforms.md  0005-one-engine-session-at-a-time.md  0006-set-preview-timeline-clips-interim.md  0007-dj-mixer-buses-deferred.md  0008-aux-bus-names-foundation.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
research/experiments/differentiable_mixing/: __init__.py  diffmst_notes.md  dmc_console.py  losses.py
runpod-server/: README.md  requirements.txt  server.py  start-ml.sh
runpod-server/models/: __init__.py  analysis.py  embeddings.py  generation.py  reasoning.py  registry.py  separation.py
scripts/release/: DMG_README.txt  build-macos.sh  prepare-api-bundle.sh  sign-macos-app.sh
(+97 files in other folders)
