[package]
name = "odeon-desktop"
version = "0.1.0"
description = "Odeon — AI-native reference mixing workbench"
authors = ["Odeon"]
edition = "2021"
default-run = "odeon-desktop"

[lib]
name = "odeon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "odeon-desktop"
path = "src/main.rs"

[[bin]]
name = "timeline-spike"
path = "src/bin/timeline_spike.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                   = { version = "2", features = ["macos-private-api"] }
odeon-timeline          = { path = "../../../crates/odeon-timeline", features = ["embed"] }
serde_json              = "1"
pollster                = "0.3"
raw-window-handle = "0.6"
objc                    = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
tauri-plugin-shell      = "2"
tauri-plugin-dialog     = "2"
tauri-plugin-fs         = "2"
serde                   = { version = "1", features = ["derive"] }
serde_json              = "1"
tokio                   = { version = "1", features = ["full"] }
log                     = "0.4"

[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1
strip       = true
